Make KTurtle not crash on '$x = ()'.

Combined with the previous commit it will now display an error message telling the user he or she is not allowed to use a ')' there.
BUG: 258604

svn path=/trunk/KDE/kdeedu/kturtle/; revision=1202938